src/assets/style/components/canvas/_canvas-settings.scss
.canvas-settings {
  position: absolute;
  inset: auto 0 0 auto;

  padding: 40px;
  border-inline-start: 2px solid $setting-border-clr;
  border-block-start: 2px solid $setting-border-clr;
  border-top-left-radius: $controls-border-radius;

  background-color: $main-theme-clr--10;
  transition: background-color $theme-transition;
  box-shadow: $settings-shadow;
  cursor: default;
  --animate-duration: 0.6s;

  @include for-mobile-layout {
    padding: 20px;

    height: 60dvh;
    width: 65vw;

    .settings-form {
      width: 100%;
      height: 100%;
      justify-content: space-between;

      .input-container {
        flex-direction: column;

        .container {
          width: 100%;
        }
      }

      .options-container {
        flex-direction: column;

        a.btn,
        button.btn {
          font-size: em(16px);
          width: 100%;
          padding-block: 15px;
        }
      }
    }
  }

  &.dark {
    background-color: $dark-theme-clr--5;
    .settings-form {
      .input-container {
        input[type='range'] {
          &::-webkit-slider-thumb {
            background-color: $dark-theme-clr;
          }
        }
      }

      .options-container {
        .btn {
          background-color: $dark-theme-clr;

          &:hover {
            background-color: $dark-theme-clr-10;
          }
        }
      }
    }
  }

  .settings-form {
    justify-content: space-around;
    gap: 30px;

    .input-container {
      width: 100%;
      gap: 20px;

      label {
        font-size: em(16px);
      }

      .container {
        display: grid;
        grid-template-columns: 1fr 30px;
        align-items: center;
        gap: 7px;

        input[type='range'] {
          -webkit-appearance: none;
          height: 3px;
          border-radius: 2em;

          background-color: $secondary-font-clr;
          transition: background-color $theme-transition;
          cursor: grabbing;

          &::-webkit-slider-thumb {
            -webkit-appearance: none;
            width: 20px;
            height: 20px;

            border-radius: 50%;
            background-color: $main-theme-clr;
            transition: background-color $theme-transition;
          }

          &:active {
            pointer-events: none;
          }
        }

        span {
          font-size: em(14px);
          font-family: $heading-font-family;
        }
      }
    }

    .options-container {
      width: 100%;
      gap: 20px;

      .btn {
        width: 50%;
        padding: 5px 10px;
        border-radius: $controls-border-radius;

        font-size: em(14px);
        color: $secondary-font-clr;
        text-align: center;

        background-color: $main-theme-clr;
        transition: background-color $theme-transition;

        &:hover {
          background-color: $main-theme-clr-10;
        }
      }
    }
  }
}

